<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5B8EA5"
    tools:context=".MainActivity3">

    <EditText
        android:id="@+id/name"
        android:layout_width="195dp"
        android:layout_height="80dp"
        android:background="#fff"
        android:gravity="center_vertical"
        android:hint="@string/name"
        android:textSize="22sp"
        android:paddingLeft="14dp"/>

    <EditText
        android:id="@+id/Address"
        android:layout_width="195dp"
        android:layout_height="80dp"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="4dp"
        android:background="#fff"
        android:gravity="center_vertical"
        android:hint="@string/address"
        android:textSize="22sp"
        android:paddingLeft="14dp" />

    <EditText
        android:id="@+id/subjet"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/name"
        android:layout_marginTop="12dp"
        android:background="#fff"
        android:hint="@string/subject"
        android:textSize="22sp"
        android:paddingLeft="14dp"/>

    <EditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_below="@id/subjet"
        android:layout_marginTop="12dp"
        android:background="#fff"
        android:gravity="top"
        android:hint="@string/Message"
        android:textSize="22sp"
        android:paddingLeft="14dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="22dp"
        android:text="@string/submit"
        android:textSize="20sp" />

</RelativeLayout>